--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"@types/react": "^16.9.34",
 		"isomorphic-unfetch": "^3.0.0",
 		"next": "^9.3.4",
+		"now": "^17.1.1",
 		"react": "^16.13.1",
 		"react-dom": "^16.13.1",
 		"typescript": "^3.8.3"
