--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
 		"@types/node": "^13.11.1",
 		"@types/react": "^16.9.34",
 		"isomorphic-unfetch": "^3.0.0",
+		"konva": "^4.2.2",
 		"next": "^9.3.4",
 		"now": "^17.1.1",
 		"react": "^16.13.1",
 		"react-dom": "^16.13.1",
+		"react-konva": "^16.13.0-0",
 		"typescript": "^3.8.3"
 	}
 }
